added OSM POI AND streets
